2017-11-09  Keith Marshall  <keith@users.osdn.me>

	Normalize fd_set event macros for <winsock2.h> compatibility.

	* include/winsock.h (FD_READ, FD_WRITE, FD_OOB, FD_ACCEPT, FD_CONNECT)
	(FD_CLOSE): Redefine them, deriving respective values as shifts by...
	(FD_READ_BIT, FD_WRITE_BIT, FD_OOB_BIT, FD_ACCEPT_BIT, FD_CONNECT_BIT)
	(FD_CLOSE_BIT): ...this new enumerated count sequence, applying each
	count to a bit flag with value of 1, in each case respectively.
	[_WINSOCK2_H]: Extend shift count enumeration, to include...
	(FD_QOS_BIT, FD_GROUP_QOS_BIT, FD_ROUTING_INTERFACE_CHANGE_BIT)
	(FD_ADDRESS_LIST_CHANGE_BIT): ...these additional counts; hence...
	[_WINSOCK2_H] (FD_QOS, FD_GROUP_QOS, FD_ROUTING_INTERFACE_CHANGE)
	[_WINSOCK2_H] (FD_ADDRESS_LIST_CHANGE): ...define each of these.
	(FD_MAX_EVENTS): Define unconditionally; it represents a shift count
	of 1 greater than the offset of the last defined flag; hence...
	(FD_ALL_EVENTS): ...derive this mask for all event flags.

2017-11-09  Keith Marshall  <keith@users.osdn.me>

	Filter potential WinSock v2 conflicts out of <winsock.h>

	* include/winsock.h [_WINSOCK2_H] <mswsock.h>: Do not include it.
	[_WINSOCK2_H] (IP_MULTICAST_IF, IP_MULTICAST_TTL, IP_MULTICAST_LOOP)
	(IP_ADD_MEMBERSHIP, IP_DROP_MEMBERSHIP, IP_DEFAULT_MULTICAST_TTL)
	(IP_DEFAULT_MULTICAST_LOOP, IP_MAX_MEMBERSHIPS, struct ip_mreq): Do
	not define any of these; they are not compatible with WinSock v2.
	[_WINSOCK2_H] (SOMAXCONN): Do not define it; it will be defined
	appropiately in <winsock2.h>

2017-11-09  Keith Marshall  <keith@users.osdn.me>

	Filter out <winsock.h> typedef anomalies.

	* include/winsock.h (FD_SET, PFD_SET, LPFD_SET): If user defines...
	[_WINSOCK_ANOMALOUS_TYPEDEFS]: ...this new feature test macro, expose
	them as type definitions, but warn of potential conflict with...
	[!_WINSOCK_ANOMALOUS_TYPEDEFS] (FD_SET): ...this POSIX.1 mandated
	function; declare its prototype.

2017-11-08  Keith Marshall  <keith@users.osdn.me>
